[package]
authors = ["MoritzKn <moritz.kneilmann@gmx.de>"]
build = "build.rs"
license = "MIT"
name = "ralculator"
repository = "https://github.com/MoritzKn/ralculator"
version = "0.2.0"

[dependencies]
env_logger = "0.4.2"
log = "0.3.7"

[dependencies.gtk]
features = ["v3_16"]
version = "0.1.0"


[build-dependencies]
peg = "0.5"
